third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/no-comma-1.stderr
TOML parse error at line 1, column 20
  |
1 | no-comma-1 = [true false]
  |                    ^
invalid array
expected `]`
